[Update] Config Page: Vr Tab: Add OverlayLargeLogSettings.

--- a/locales/en.json
+++ b/locales/en.json
@@ -60,14 +60,17 @@
     },
     "overlay_settings": {
         "restore_default_settings": "Restore Default Settings",
-        "opacity": "Opacity",
-        "ui_scaling": "UI Scaling",
+        "enable": "Enable",
+        "position": "Position",
+        "rotation": "Rotation",
         "x_position": "X-axis (left-right)",
         "y_position": "Y-axis (up-down)",
         "z_position": "Z-axis (front-back)",
         "x_rotation": "X-axis rotation",
         "y_rotation": "Y-axis rotation",
         "z_rotation": "Z-axis rotation",
+        "opacity": "Opacity",
+        "ui_scaling": "UI Scaling",
         "display_duration": "Display duration",
         "fadeout_duration": "Fadeout duration"
     },
